welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: ';' expected but ')' found.
	else if(a + b == 10 + b + c) | (a + b == 10 + a + c)){
                                                            ^